deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dev-deployment
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: cithit/woodwaj4:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: nfs-storage
              mountPath: /nfs
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: flask-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: flask-dev-service
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: flask.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-dev-service
                port:
                  number: 80
